# python-pyside6-with-fluentwindows-boilerplate

./: .gitignore  README.md  codebase.md  main.py  pyproject.toml  requirements.txt
config/: config.json
src/: __init__.py
src/common/: __init__.py  signal_bus.py  style_sheet.py
src/components/: __init__.py  link_card.py  sample_card.py
src/config/: __init__.py  config.json  config.py
src/controllers/: __init__.py
src/models/: __init__.py
src/utils/: __init__.py
src/views/: __init__.py  blank_widget.py  home_window.py  main_window.py  setting_interface.py
src/widgets/: blank_widget.py  main_window.py
tests/: conftest.py  test_blank_widget.py  test_config.py  test_home_window.py  test_link_card.py  test_sample_card.py  test_setting_interface.py  test_signal_bus.py  test_style_sheet.py
