[project]
name = "pyqt-pyside-fluent-widgets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorthief>=0.2.1",
    "darkdetect>=0.8.0",
    "pillow>=12.3.0",
    "pyside6>=6.4.2",
    "pyside6-fluent-widgets[full]>=1.11.2",
    "pysidesix-frameless-window>=0.8.0",
    "ruff>=0.15.20",
    "scipy>=1.18.0",
]
